# ollama-pet

./: .gitignore  CNAME  CONTRIBUTING.md  LICENSE  README.md  index.html  next.config.ts  package-lock.json  package.json
documentation/: README.md  animation_guide.md  architecture.md  ollama_integration.md
public/sprites/: manifest.json
scripts/: process-sprites.ts
src/: App.tsx  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/health/: route.ts
src/app/health/: route.ts
src/assets/ollamapet_sprite/assets/: metadata.json
src/assets/ollamapet_sprite/idle/: metadata.json
src/components/: theme-toggle.tsx
src/components/Chat/: Chat.tsx
src/components/Pet/: Pet.tsx
src/components/layout/: Footer.tsx  Navbar.tsx
src/components/sections/: Customization.tsx  Download.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  LiveDemo.tsx  LiveDemo.tsx.bak  Privacy.tsx  TechStack.tsx
src/components/ui/: DynamicPet.tsx  SpriteAnimator.tsx  card.tsx  dialog.tsx  sheet.tsx  tabs.tsx
src/content/en/: common.json  customization.json  demo.json  download.json  features.json  hero.json  how-it-works.json  privacy.json  tech.json
src/hooks/: useClickSurprise.ts  useLenis.ts  useParallax.ts  usePetLogic.ts  useReducedMotion.ts  useScrollReveal.ts  useSpriteAnimation.ts
src/lib/: content.ts  icons.tsx  utils.ts
src/services/: historyDb.ts  ollama.ts
src/stores/: usePetStore.ts
(+8 files in other folders)
